feat: debug with prod

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "element-ui": "^2.4.5",
     "jsencrypt": "^3.0.0-rc.1",
+    "moment": "^2.24.0",
     "vue": "^2.6.11",
     "vue-ls": "^3.2.1"
   },
